# opd

./: pyproject.toml
src/opd/: __init__.py  arguments.py
src/opd/rollout/: __init__.py  arguments.py  base.py  hf_backend.py  vllm_backend.py
src/opd/rollout/env/: __init__.py  base.py
src/opd/rollout/llm_backend/: __init__.py  base.py  hf.py  vllm.py
src/opd/rollout/worker/: __init__.py  base.py
